# Genetic_Kingdom_CE

./: .gitignore  CMakeLists.txt  GeneticKingdom  Ogre  README.md  Repositorio_Github.txt
.json/: c_cpp_properties.json
assets/textures/towers/towersInLayout/: ArcherLOLvl1.png~  ArcherLOLvl3.png~  MageLOLvl3.png~
docs/: EnemyStats.md
src/: main.cpp
src/config/: Constants.h
src/core/: EconomySystem.cpp  EconomySystem.h  Game.cpp  Game.h  WaveManager.cpp  WaveManager.h
src/entities/enemies/: Enemy.cpp  Enemy.h
src/entities/enemies/darkElf/: DarkElf.cpp  DarkElf.h
src/entities/enemies/harpy/: Harpy.cpp  Harpy.h
src/entities/enemies/mercenary/: Mercenary.cpp  Mercenary.h
src/entities/enemies/ogre/: Ogre.cpp  Ogre.h
src/entities/towers/: Projectile.cpp  Projectile.h  Tower.cpp  Tower.h
src/entities/towers/archerTower/: ArcherTower.cpp  ArcherTower.h
src/entities/towers/artilleryTower/: ArtilleryTower.cpp  ArtilleryTower.h
src/entities/towers/mageTower/: MageTower.cpp  MageTower.h
src/map/: BridgeTile.cpp  BridgeTile.h  GrassTile.cpp  GrassTile.h  Map.cpp  Map.h  PathTile.cpp  PathTile.h  Tile.cpp  Tile.h  TowerTile.cpp  TowerTile.h
src/screens/: DefeatScreen.cpp  DefeatScreen.h  GameplayScreen.cpp  GameplayScreen.h  Screen.h  ScreenManager.cpp  ScreenManager.h  StartScreen.cpp  StartScreen.h
src/systems/: GeneticAlgorithm.cpp  GeneticAlgorithm.h  Pathfinding.cpp  Pathfinding.h
src/ui/: BottomPanel.cpp  BottomPanel.h  Button.cpp  Button.h  GamePanel.cpp  GamePanel.h  SidePanel.cpp  SidePanel.h  TextElement.cpp  TextElement.h  TowerBuy.cpp  TowerBuy.h  TowerUpgrade.cpp  TowerUpgrade.h
src/utils/: Timer.cpp  Timer.h
